--- a/src/main/resources/data/digs_dnd_origins/powers/gnome/forest/speak_with_small_beasts.json
+++ b/src/main/resources/data/digs_dnd_origins/powers/gnome/forest/speak_with_small_beasts.json
@@ -1,6 +1,6 @@
 {
     "name": "Speak With Small Beasts",
-    "description": "You can immediately tame animals with your empty hand.",
+    "description": "Through sounds and gestures, you can communicate simple ideas with small beasts. Using an empty hand, you can immediately tame small animals.",
     "type": "origins:action_on_entity_use",
     "bientity_action": {
         "type": "origins:tame"
