--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
  plugins {
-	id 'fabric-loom' version '1.1-SNAPSHOT'
+	id 'fabric-loom' version '1.2-SNAPSHOT'
 	id 'maven-publish'
 }
 
@@ -46,8 +46,7 @@ repositories {
 
 	//geckolib repository
 	maven {
-		url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
-	}
+		url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/' }
 }
 
 loom {
@@ -94,7 +93,7 @@ dependencies {
 	modApi("com.github.Virtuoel:Pehkui:${pehkui_version}", {
 		exclude group: "net.fabricmc.fabric-api"
 	})
-	modImplementation 'software.bernie.geckolib:geckolib-fabric-1.19.3:4.0.6'
+	modImplementation "software.bernie.geckolib:geckolib-fabric-1.19:3.1.40"
 }
 
 processResources {
