--- a/build.gradle
+++ b/build.gradle
@@ -90,11 +90,11 @@ dependencies {
 	// modImplementation "net.fabricmc.fabric-api:fabric-api-deprecated:${project.fabric_version}"
 
 	//mod dependencies
-	modImplementation "com.github.eggohito:origins-fabric:${project.origins_version}"
+	modImplementation "com.github.apace100:origins-fabric:${project.origins_version}"
 	modApi("com.github.Virtuoel:Pehkui:${pehkui_version}", {
 		exclude group: "net.fabricmc.fabric-api"
 	})
-	modImplementation 'software.bernie.geckolib:geckolib-fabric-1.19.3:4.0.6'
+	modImplementation 'software.bernie.geckolib:geckolib-fabric-1.19.4:4.1.3'
 }
 
 processResources {
