--- a/gradle.properties
+++ b/gradle.properties
@@ -4,18 +4,18 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.19.3
-yarn_mappings=1.19.3+build.5
-loader_version=0.14.19
+minecraft_version=1.19.4
+yarn_mappings=1.19.4+build.1
+loader_version=0.14.17
 
 # Mod Properties
-mod_version=1.19.3-0.0.8
+mod_version=1.19.4-0.0.8
 maven_group=net.distantdig.digs_dnd_origins
 archives_base_name=digs_dnd_origins
 
 # Dependencies
-fabric_version=0.76.1+1.19.3
+fabric_version=0.76.0+1.19.4
 
 # Mod Version
-origins_version=v1.8.1
+origins_version=1.9.0
 pehkui_version=3.7.3
