--- a/build.gradle
+++ b/build.gradle
@@ -76,25 +76,18 @@ sourceSets {
     }
 }
 dependencies {
-	// To change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
-	// Fabric API. This is technically optional, but you probably want it anyway.
+	// Fabric API
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-	
-	// Uncomment the following line to enable the deprecated Fabric API modules. 
-	// These are included in the Fabric API production distribution and allow you to update your mod to the latest modules at a later more convenient time.
 
-	// modImplementation "net.fabricmc.fabric-api:fabric-api-deprecated:${project.fabric_version}"
-
-	//mod dependencies
-	modImplementation "com.github.apace100:origins-fabric:${project.origins_version}"
+	//Mod Dependencies
 	modApi("com.github.Virtuoel:Pehkui:${pehkui_version}", {
 		exclude group: "net.fabricmc.fabric-api"
 	})
-	modImplementation 'software.bernie.geckolib:geckolib-fabric-1.19.4:4.1.3'
+	modImplementation "software.bernie.geckolib:geckolib-fabric-1.20:${geckolib_version}"
 }
 
 processResources {
