--- a/gradle.properties
+++ b/gradle.properties
@@ -4,18 +4,18 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.19.4
-yarn_mappings=1.19.4+build.1
-loader_version=0.14.17
+minecraft_version=1.20.1
+yarn_mappings=1.20.1+build.8
+loader_version=0.14.21
 
 # Mod Properties
-mod_version=1.19.4-0.0.8
+mod_version=1.20.1-0.0.9
 maven_group=net.distantdig.digs_dnd_origins
 archives_base_name=digs_dnd_origins
 
 # Dependencies
-fabric_version=0.76.0+1.19.4
+fabric_version=0.84.0+1.20.1
 
 # Mod Version
-origins_version=1.9.0
-pehkui_version=3.7.3
+pehkui_version=3.7.6
+geckolib_version=4.2
