--- a/build.gradle
+++ b/build.gradle
@@ -18,9 +18,27 @@ repositories {
 	// for more information about repositories.
 
 	//origins repositories
+	exclusiveContent {
+
+		forRepository {
+			maven {
+				name = "Modrinth"
+				url = "https://api.modrinth.com/maven"
+			}
+		}
+
+		filter {
+			includeGroup "maven.modrinth"
+		}
+
+	}
 	maven {
-		name = "Ladysnake Libs"
-		url = 'https://ladysnake.jfrog.io/artifactory/mods'
+		name = "QuiltMC"
+		url = "https://maven.quiltmc.org/repository/release"
+	}
+	maven {
+		name = 'Ladysnake Mods'
+		url = 'https://maven.ladysnake.org/releases'
 	}
 	maven {
 		url = 'https://maven.cafeteria.dev'
@@ -29,13 +47,13 @@ repositories {
 		}
 	}
 	maven {
+		url "https://jitpack.io"
+	}
+	maven {
 		url "https://maven.jamieswhiteshirt.com/libs-release"
 		content {
 			includeGroup "com.jamieswhiteshirt"
 		}
-	}
-	maven {
-		url "https://jitpack.io"
 	}
 	maven {
 		url "https://maven.shedaniel.me/"
@@ -43,7 +61,6 @@ repositories {
 	maven {
 		url "https://maven.terraformersmc.com/"
 	}
-
 	//geckolib repository
 	maven {
 		url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
@@ -84,6 +101,16 @@ dependencies {
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
 	//Mod Dependencies
+	implementation(files("libs/Origins-1.20.2-1.11.3"))
+	modApi "com.github.apace100:apoli:${project.apoli_version}"
+	include "com.github.apace100:apoli:${project.apoli_version}"
+	modApi("dev.onyxstudios.cardinal-components-api:cardinal-components-base:${cca_version}") {
+		exclude(group: "net.fabricmc.fabric-api")
+	}
+	modApi("dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${cca_version}") {
+		exclude(group: "net.fabricmc.fabric-api")
+	}
+	include modApi("com.jamieswhiteshirt:reach-entity-attributes:${project.reach_version}")
 	modApi("com.github.Virtuoel:Pehkui:${pehkui_version}", {
 		exclude group: "net.fabricmc.fabric-api"
 	})
