--- a/gradle.properties
+++ b/gradle.properties
@@ -4,18 +4,21 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.20.1
-yarn_mappings=1.20.1+build.8
-loader_version=0.14.21
+minecraft_version=1.20.2
+yarn_mappings=1.20.2+build.4
+loader_version=0.14.24
 
 # Mod Properties
-mod_version=1.20.1-0.0.11
+mod_version=1.20.2-0.0.12
 maven_group=net.distantdig.digs_dnd_origins
 archives_base_name=digs_dnd_origins
 
 # Dependencies
-fabric_version=0.84.0+1.20.1
+fabric_version=0.90.7+1.20.2
 
 # Mod Version
-pehkui_version=3.7.6
+apoli_version=2.10.3
+cca_version=5.3.0
+reach_version=2.4.0
+pehkui_version=3.7.11
 geckolib_version=4.2
