added common power folder and pointers for common powers

--- a/src/main/resources/data/digs_dnd_origins/powers/dragonborn/ability_score_increase.json
+++ b/src/main/resources/data/digs_dnd_origins/powers/dragonborn/ability_score_increase.json
@@ -1,8 +1,27 @@
 {
-	"type": "origins:attribute",
-	"modifier": {
-		"attribute": "minecraft:generic.attack_damage",
-		"operation": "addition",
-		"value": 1
+	"type": "origins:action_on_callback",
+	"entity_action_chosen":
+	{
+		"type": "origins:grant_power",
+		"power": "digs_dnd_origins:common/ability_score_increase/strength",
+		"source": "example:power_source"
+	},
+	"entity_action_added":
+	{
+		"type": "origins:grant_power",
+		"power": "digs_dnd_origins:common/ability_score_increase/strength",
+		"source": "example:power_source"
+	},
+	"entity_action_lost":
+	{
+		"type": "origins:revoke_power",
+		"power": "digs_dnd_origins:common/ability_score_increase/strength",
+		"source": "example:power_source"
+	},
+	"entity_action_removed":
+	{
+		"type": "origins:revoke_power",
+		"power": "digs_dnd_origins:common/ability_score_increase/strength",
+		"source": "example:power_source"
 	}
 }
