--- a/src/main/resources/data/digs_dnd_origins/powers/halfling/stout/ability_score_increase.json
+++ b/src/main/resources/data/digs_dnd_origins/powers/halfling/stout/ability_score_increase.json
@@ -1,45 +1,27 @@
 {
-	"type": "origins:multiple",
-
-	"attributes": {
-		"type": "origins:attribute",
-		"modifiers": [
-			{
-				"attribute": "minecraft:generic.max_health",
-				"operation": "multiply_total",
-				"value": -0.35
-			},
-			{
-				"attribute": "generic.attack_damage",
-				"value": -0.5,
-				"operation": "addition"
-			}
-		]
+	"type": "origins:action_on_callback",
+	"entity_action_chosen":
+	{
+		"type": "origins:grant_power",
+		"power": "digs_dnd_origins:common/ability_score_increase/constitution",
+		"source": "example:power_source"
 	},
-
-	"base_revoke": {
-		"type": "origins:action_on_callback",
-		"entity_action_chosen":
-		{
-			"type": "origins:revoke_power",
-			"power": "digs_dnd_origins:halfling/small_size",
-			"source": "digs_dnd_origins:halfling"
-		},
-		"entity_action_added":
-		{
-			"type": "origins:revoke_power",
-			"power": "digs_dnd_origins:halfling/small_size",
-			"source": "digs_dnd_origins:halfling"
-		},
-		"entity_action_respawned":
-		{
-			"type": "origins:revoke_power",
-			"power": "digs_dnd_origins:halfling/small_size",
-			"source": "digs_dnd_origins:halfling"
-		},
-		"condition": {
-			"type": "origins:power",
-			"power": "digs_dnd_origins:dwarf/hill/dwarven_toughness"
-		}
+	"entity_action_added":
+	{
+		"type": "origins:grant_power",
+		"power": "digs_dnd_origins:common/ability_score_increase/constitution",
+		"source": "example:power_source"
+	},
+	"entity_action_lost":
+	{
+		"type": "origins:revoke_power",
+		"power": "digs_dnd_origins:common/ability_score_increase/constitution",
+		"source": "example:power_source"
+	},
+	"entity_action_removed":
+	{
+		"type": "origins:revoke_power",
+		"power": "digs_dnd_origins:common/ability_score_increase/constitution",
+		"source": "example:power_source"
 	}
 }
