--- a/src/main/resources/data/digs_dnd_origins/powers/tiefling/ability_score_increase.json
+++ b/src/main/resources/data/digs_dnd_origins/powers/tiefling/ability_score_increase.json
@@ -1,8 +1,27 @@
 {
-  "type": "origins:attribute",
-  "modifier": {
-    "attribute": "spell_power:fire",
-    "value": 1,
-    "operation": "addition"
+  "type": "origins:action_on_callback",
+  "entity_action_chosen":
+  {
+    "type": "origins:grant_power",
+    "power": "digs_dnd_origins:common/ability_score_increase/intelligence_fire",
+    "source": "example:power_source"
+  },
+  "entity_action_added":
+  {
+    "type": "origins:grant_power",
+    "power": "digs_dnd_origins:common/ability_score_increase/intelligence_fire",
+    "source": "example:power_source"
+  },
+  "entity_action_lost":
+  {
+    "type": "origins:revoke_power",
+    "power": "digs_dnd_origins:common/ability_score_increase/intelligence_fire",
+    "source": "example:power_source"
+  },
+  "entity_action_removed":
+  {
+    "type": "origins:revoke_power",
+    "power": "digs_dnd_origins:common/ability_score_increase/intelligence_fire",
+    "source": "example:power_source"
   }
 }
